fix: some alignment issues

--- a/themes/bella/assets/section.collections.css
+++ b/themes/bella/assets/section.collections.css
@@ -22,8 +22,9 @@
   }
   [ui-section=collections] .content-area .actions{
     display:flex;
-    gap:var(--spacing-24);
+    justify-content:var(--text-heading-alignment-desktop);
     margin-top:var(--spacing-8);
+    gap:var(--spacing-24);
   }
   [ui-section=collections] .items-area{
     width:100%;
@@ -41,13 +42,6 @@
       display:flex;
       flex-direction:column;
     }
-    [ui-section=collections] .content-area{
-      justify-content:center;
-      text-align:center;
-    }
-    [ui-section=collections] .content-area .actions{
-      justify-content:center;
-    }
     [ui-section=collections] .items-area{
       padding-right:8%;
     }
@@ -59,5 +53,8 @@
     }
     [ui-section=collections] .content-area{
       padding-right:var(--spacing-24);
+    }
+    [ui-section=collections] .content-area .actions{
+      justify-content:var(--text-heading-alignment-mobile);
     }
   }
