--- a/themes/bella/styles/section.testimonials.scss
+++ b/themes/bella/styles/section.testimonials.scss
@@ -22,6 +22,7 @@
       .actions {
         display: flex;
         gap: var(--spacing-16);
+        justify-content: var(--text-heading-alignment-desktop);
       }
     }
 
@@ -87,21 +88,15 @@
 
       [ui-slot="head"] {
         flex-direction: column;
-        justify-content: center;
-        text-align: center;
 
         .actions {
-          justify-content: center;
+          justify-content: var(--text-heading-alignment-mobile);
         }
       }
     }
 
     @media (width <= 769px) {
       --item-size: 84%;
-
-      [ui-slot="head"] {
-        padding-inline: var(--spacing-0);
-      }
 
       .items-area {
         padding-inline: var(--spacing-24);
